--- a/style.css
+++ b/style.css
@@ -5,22 +5,80 @@ margin: 0;
 height: 100vh;
 }
 
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 20px;
+    background-color: black;
+    position: relative;
+}
 
-nav ul {
-    list-style-type: none;
+.nav-links {
+  display: flex;
+  gap:  20px;
+  justify-self: center;
+  list-style: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
-    background-color: black;
-    display: flex;
-    justify-content: center;
     width: 100%;
+    justify-content: center;
 }
 
-nav ul li {
-    padding: 15px 20px;
+.nav-links li {
+    padding: 8px 12px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.nav-links li:hover {
+    background-color: #141414;
+}
+
+.profile-icon {
+    width: 70px;
+    height: 70px;
+    border-radius: 5px;
+    position: absolute;
+    left: 20px;
+    top: 3px;
+}
+
+.dropdown-arrow {
+    position: absolute;
+    left: 100px;
+    top: 35px;
     cursor: pointer;
 }
-nav ul li:hover {
-    background-color: #555;
+
+
+.logo {
+   width: 70px;
+    height: 70px;
+    border-radius: 5px;
+    position: absolute;
+    right: 20px;
+    top: 3px;
+}
+
+main {
+padding: 40px 20px;
+
+}
+
+.continue-watching h2{
+    font-size: 30px;
+    margin-top: 10px;
+    margin-left: 10px;
+    overflow-x: auto;
+ }
+
+ .card-large {
+min-width: 420px;
+height: 350px;
+cursor: pointer;
+margin-left: 15px;
+border: white 2px solid;
+border-radius: 12px; 
+
 }
