--- a/style.css
+++ b/style.css
@@ -53,8 +53,8 @@ height: 100vh;
 
 
 .logo {
-   width: 70px;
-    height: 70px;
+   width: 75px;
+    height: 75px;
     border-radius: 5px;
     position: absolute;
     right: 20px;
@@ -74,11 +74,60 @@ padding: 40px 20px;
  }
 
  .card-large {
-min-width: 420px;
+min-width: 600px;
 height: 350px;
 cursor: pointer;
-margin-left: 15px;
 border: white 2px solid;
 border-radius: 12px; 
+}
 
+.progress-bar {
+    margin-left: 6px;
+margin-top: -5px;
+background-color: rgba(255, 255, 255, 0.3);
+width: 100%;
+height: 6px;
+border-radius: 3px;
+overflow: hidden;
+}
+
+.progress-fill {
+background: #e50914;
+height: 100%;
+
+}
+
+.episode-info {
+color: #5d5d5c;
+font-size: 17px;
+margin-left: 6px;
+}
+
+.time-left {
+font-size: 17px;
+margin-left: 6px;
+}
+
+.small-card-image {
+    height: 350px;
+width: 250px;
+cursor: pointer;
+border: white 2px solid;
+border-radius: 12px; 
+margin-left: 200px;
+
+}
+
+.content-row {
+display: flex;
+align-items: flex-start;
+gap: 16px;
+
+}
+
+.watch-card {
+    width: 420px;
+display: flex;
+flex-direction: column;
+gap: 16px;
 }
