--- a/style.css
+++ b/style.css
@@ -150,6 +150,14 @@ cursor: pointer;
 margin-left: 20px;
 }
 
+.small-card-image-four {
+    height: 350px;
+width: 250px;
+cursor: pointer;
+margin-left: 20px;
+
+}
+
 .Liked {
   font-size: 25px;
     color: gray;
@@ -159,5 +167,5 @@ margin-left: 20px;
   display: flex;
   gap: 16px;
   padding-bottom: 10px;
+  gap:50px;
 }
-
